[gd_scene load_steps=18 format=3 uid="uid://c56yvex4g3pif"]

[ext_resource type="Script" path="res://PlayerScripts/PlayerController.gd" id="1_fb5hj"]
[ext_resource type="Script" path="res://PlayerScripts/ItemManager.gd" id="2_pemao"]
[ext_resource type="PackedScene" uid="uid://67kq4c7qivrh" path="res://Scenes/Items/map_item.tscn" id="3_pixbx"]
[ext_resource type="PackedScene" uid="uid://bqrdettbqghbi" path="res://Models/Compass.glb" id="5_4xvks"]
[ext_resource type="Script" path="res://PlayerScripts/CompassItem.gd" id="6_3atti"]
[ext_resource type="PackedScene" uid="uid://h7v7gl1r3btn" path="res://Models/StepCounter.glb" id="7_wr6qj"]
[ext_resource type="AudioStream" uid="uid://bqvg4745qyxgs" path="res://Audio/17893__zippi1__sound-click3.wav" id="8_3d1bq"]
[ext_resource type="Script" path="res://Models/StepCounter.gd" id="8_fnlbg"]
[ext_resource type="AudioStream" uid="uid://bvx5ncrwqnedq" path="res://Audio/27009__nuff3__footsteps-dirt-pack/477390__nuff3__steps-dirt_2a.ogg" id="8_qv07j"]
[ext_resource type="Script" path="res://Scenes/audio_randomizer.gd" id="9_2ff4q"]
[ext_resource type="AudioStream" uid="uid://ga1ddcrbgemq" path="res://Audio/27009__nuff3__footsteps-dirt-pack/477391__nuff3__steps-dirt_1b.ogg" id="10_1qmbj"]
[ext_resource type="AudioStream" uid="uid://0fg37uvlsx48" path="res://Audio/27009__nuff3__footsteps-dirt-pack/477392__nuff3__steps-dirt_1a.ogg" id="11_x8jd4"]
[ext_resource type="AudioStream" uid="uid://b8qpsg00ou76v" path="res://Audio/27009__nuff3__footsteps-dirt-pack/477393__nuff3__steps-dirt-falling_1a.ogg" id="12_01hob"]
[ext_resource type="AudioStream" uid="uid://n63otkahu7j4" path="res://Audio/27009__nuff3__footsteps-dirt-pack/477394__nuff3__steps-dirt_3b.ogg" id="13_4tdk0"]
[ext_resource type="AudioStream" uid="uid://dx8m6t5bolw6x" path="res://Audio/27009__nuff3__footsteps-dirt-pack/477395__nuff3__steps-dirt_3a.ogg" id="14_ttwdn"]
[ext_resource type="AudioStream" uid="uid://csoty3ifjain7" path="res://Audio/27009__nuff3__footsteps-dirt-pack/477396__nuff3__steps-dirt_2b.ogg" id="15_fsknt"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_18swh"]
radius = 0.4

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("CameraNode", "MapItemInst")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.03934)
script = ExtResource("1_fb5hj")
CameraNode = NodePath("Camera3D")
LookSpeedWhenNotCaptured = 2
MapItemInst = NodePath("Camera3D/ItemManager/MapItem")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_18swh")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.608218, 0)

[node name="ItemManager" type="Node3D" parent="Camera3D" node_paths=PackedStringArray("Items")]
script = ExtResource("2_pemao")
Items = [NodePath("MapItem"), NodePath("CompassItem"), NodePath("StepCounterItem")]

[node name="MapItem" parent="Camera3D/ItemManager" node_paths=PackedStringArray("Camera", "Player") instance=ExtResource("3_pixbx")]
transform = Transform3D(1, 0, 0, 0, 0.987414, 0.158158, 0, -0.158158, 0.987414, 0, 0.0739737, -0.892)
Camera = NodePath("../..")
Player = NodePath("../../..")

[node name="CompassItem" parent="Camera3D/ItemManager" node_paths=PackedStringArray("RootTransform", "Needle") instance=ExtResource("5_4xvks")]
transform = Transform3D(0.165, 0, 0, 0, 0.155439, -0.0553495, 0, 0.0553495, 0.155439, 0, -0.201, -0.498)
script = ExtResource("6_3atti")
RootTransform = NodePath("../../..")
Needle = NodePath("Spinner")

[node name="StepCounterItem" parent="Camera3D/ItemManager" node_paths=PackedStringArray("HundredsDigit", "TensDigit", "OnesDigit", "Player") instance=ExtResource("7_wr6qj")]
transform = Transform3D(0.09, 0, 0, 0, 0.0858929, 0.0268777, 0, -0.0268777, 0.0858929, 0, -0.155, -0.431)
script = ExtResource("8_fnlbg")
HundredsDigit = NodePath("Hundreds")
TensDigit = NodePath("Tens")
OnesDigit = NodePath("Ones")
Player = NodePath("../../..")

[node name="TickSound" type="AudioStreamPlayer" parent="Camera3D/ItemManager/StepCounterItem"]
stream = ExtResource("8_3d1bq")

[node name="FootstepPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_qv07j")
volume_db = -10.78
pitch_scale = 0.9
autoplay = true
script = ExtResource("9_2ff4q")
sounds = Array[AudioStream]([ExtResource("8_qv07j"), ExtResource("10_1qmbj"), ExtResource("11_x8jd4"), ExtResource("12_01hob"), ExtResource("13_4tdk0"), ExtResource("14_ttwdn"), ExtResource("15_fsknt")])

[connection signal="flag_marker_placed" from="Camera3D/ItemManager/MapItem" to="." method="_on_map_item_flag_marker_placed"]

[editable path="Camera3D/ItemManager/CompassItem"]
[editable path="Camera3D/ItemManager/StepCounterItem"]
